--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- LINK GOOGLE FONTS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap">
     <!-- LINK CDNJS -->
@@ -12,8 +15,9 @@
     <!-- LINK CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>🧝‍♀️ ComicAda 2 🧙🏾</title>
+    <title>🧝‍♀️ ComicAda 🧙🏾</title>
 </head>
+
 <body>
     <header class="header h-[36vw] flex flex-col">
         <div class="div-tittle-container bg-black h-14 flex items-center justify-center">
@@ -48,8 +52,8 @@
                         <select class="order-filter mr-12 w-20 h-10 bg-transparent">
                             <option class="font-semibold" value="a-z">A-Z</option>
                             <option class="font-semibold" value="z-a">Z-A</option>
-                            <option class="font-semibold" value="newest">Newest</option>
-                            <option class="font-semibold" value="oldest">Oldest</option>
+                            <option class="opt-newest font-semibold" value="newest">Newest</option>
+                            <option class="opt-oldest font-semibold" value="oldest">Oldest</option>
                         </select>
                     </div>
                     <button class="btn-search bg-black text-white text-xl max-w-full p-2 rounded-lg">Search</button>
@@ -60,7 +64,7 @@
         <!-- SECCION DE RESULTADOS DE BUSQUEDA -->
         <section class="results-section m-14 ">
             <p class="text-2xl font-bold mb-4">Results</p>
-            <p class="total-of-comics text-sm font-semibold text-gray-500">0 RESULTS</p>
+            <p class="total-finded text-sm font-semibold text-gray-500">0 RESULTS</p>
             <div class="results-cards-comics-characters grid grid-cols-5 gap-14">
                 <!-- FILLED BY JS -->
             </div>
@@ -76,7 +80,7 @@
                     <p class="name text-2xl font-bold mb-12"></p>
 
                     <div class="visual-comic">
-                    <!-- FILLED BY JS -->
+                        <!-- FILLED BY JS -->
                     </div>
 
 
@@ -98,16 +102,16 @@
         <!-- CONTROLES PARA IR A LA PAGINA PREVIA O SIGUIENTE -->
         <div class="pages-control m-8 flex items-center justify-center">
             <div class="btns-controls w-min	flex justify-between">
-                <button class="btns-first-page bg-black text-white m-3 p-3 rounded-md btn-first"><i
+                <button class="btns-first-page bg-black text-white m-3 p-3 rounded-md disabled"><i
                         class="fa-solid fa-angles-left"></i></button>
-                <button class="btns-prev-pag bg-black text-white m-3 p-3 rounded-md btn-backward"><i
+                <button class="btns-prev-pag bg-black text-white m-3 p-3 rounded-md disabled"><i
                         class="fa-solid fa-angle-left"></i></button>
                 <div>
                     <p class="current-page-num font-semibold w-max m-3 p-3"></p>
                 </div>
-                <button class="btns-next-page bg-black text-white m-3 p-3 rounded-md btn-forward"><i
+                <button class="btns-next-page bg-black text-white m-3 p-3 rounded-md"><i
                         class="fa-solid fa-angle-right"></i></button>
-                <button class="btns-last-page bg-black text-white m-3 p-3 rounded-md btn-last"><i
+                <button class="btns-last-page bg-black text-white m-3 p-3 rounded-md"><i
                         class="fa-solid fa-angles-right"></i></button>
             </div>
         </div>
