--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
         <!-- SECCION DE TARJETA SELECCIONADA C/INFO --- PERSONAJE SELECCIONADO C/INFO-->
         <section class="section-choosen-card hidden">
             <div class="info-choosen-card h-min w-fit m-16 flex">
-                <aside class="choosen-card-img overflow-hidden">
-                    <!-- FILLED BY JS -->
-                </aside>
-                <div class="div-details-card-info ml-16 w-full">
-                    <p class="name text-2xl font-bold mb-12"></p>
 
-                    <div class="visual-comic">
+                <aside class="choosen-card-img overflow-hidden">
+                    <!-- IMG INSERTED W JS -->
+                </aside>
+
+
+                <div class="div-details-card-info ml-16 w-full">
+                    <p class="name-title text-2xl font-bold mb-12"></p>
+
+                    <div class="info-comic">
                         <!-- FILLED BY JS -->
                     </div>
 
@@ -92,8 +95,10 @@
                 <p class="show-characters text-2xl font-bold mb-4">Characters</p>
                 <p class="show-comics text-2xl font-bold mb-4 hidden">Comics</p>
                 <p class="character-comic-results text-sm font-semibold text-gray-500"></p>
-                <div class="characters-in-comic-grid grid grid-cols-6 gap-14 mt-6">
 
+
+                <div class="cards-in-selectedOption-grid grid grid-cols-6 gap-14 mt-6">
+                    <!-- TODOS LOS COMICS-PERSONAJES DENTRO DEL CARD SELECCIONADO -->
                 </div>
 
             </div>
